# rust-minigrep

./: Cargo.toml  README.md
src/: lib.rs  main.rs
tests/: integration_test.rs
