[package]
name = "minigrep"
version = "0.1.0"
authors = ["piqueras <ignacio.piqueras@silicon-gears.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.7"
log = "0.4"

[dev-dependencies]
assert_cmd = "0.10"
predicates = "1"
tempfile = "3"
